--- a/package.json
+++ b/package.json
@@ -42,5 +42,8 @@
     "webpack-cli": "^4.3.1",
     "webpack-dev-server": "^3.11.1",
     "webpack-merge": "^5.7.3"
+  },
+  "dependencies": {
+    "date-fns": "^2.28.0"
   }
 }
